--- a/Lesson_10/hw/index.html
+++ b/Lesson_10/hw/index.html
@@ -61,18 +61,34 @@
 </head>
 <body>
 
+
+<!-- _______________  1  _______________-->
+
 <input type="button" id="hider" value="Приховати текст">
 
-<div id="text">Карпати — один з головних вододілів Європи між Балтійським і Чорним морем. Поділяються на дві субпровінції — Зовнішні Карпати (Західні[en] та Східні) і Внутрішні Карпати (Західні[en] та Східні). Орографічно виділяють Західні Карпати (територія Австрії, Чехії, Словаччини, Польщі та України — найвищі гірські масиви), Східні, або Лісисті, Карпати (найбільш знижена і звужена частина Карпат; Східні Карпати складаються зі Східних Бескидів (територія Польщі, Словаччини, України), Українських Карпат (Україна) і Молдово-Семиградських Карпат (Румунія), Південні Карпати, або Трансильванські Альпи (територія Румунії).</div>
+<div id="text">Карпати — один з головних вододілів Європи між Балтійським і Чорним морем. Поділяються на дві
+    субпровінції — Зовнішні Карпати (Західні[en] та Східні) і Внутрішні Карпати (Західні[en] та Східні).
+    Орографічно виділяють Західні Карпати (територія Австрії, Чехії, Словаччини, Польщі та України — найвищі
+    гірські масиви), Східні, або Лісисті, Карпати (найбільш знижена і звужена частина Карпат; Східні Карпати
+    складаються зі Східних Бескидів (територія Польщі, Словаччини, України), Українських Карпат (Україна) і
+    Молдово-Семиградських Карпат (Румунія), Південні Карпати, або Трансильванські Альпи (територія Румунії).
+</div>
 
+
+<!-- _______________  2  _______________-->
 
 <button id="button">Натисни і побачиш диво;)</button>
+
+
+<!-- _______________  3  _______________-->
 
 <form name="Confirm">
     <input type="number" name="age">
     <button>Confirm</button>
 </form>
 
+
+<!-- _______________  4  _______________-->
 
 <div class="dropbtn">
     <button onclick="myFunction()" class="dropbtn">Відкрити новорічне меню:)</button>
